@@ -1,3 +1,7 @@
+- prevent slow boot on first boot (mga#16684)
+- partionning:
+  o fix partitions not initially displayed (mga#17564)
+
 Version 17.19 - 24 February 2016
 
 - detect nvme devices as block devices (mga#17743)
