@@ -1,3 +1,6 @@
+- diskdrake:
+  o fix partitions not initially displayed (mga#17564)
+
 Version 17.19 - 24 February 2016
 
 - detect nvme devices as block devices (mga#17743)
